@@ -36,8 +36,10 @@ This release includes the following bugfixes:
  o AIX 4 and 5 get to use non-blocking sockets
  o small POST with NTLM
  o resumed file:// transfers
- o CURLOPT_DNS_CACHE_TIMEOUT and CURLOPT_DNS_USE_GLOBAL_CACHE are 64 bit "clean"
+ o CURLOPT_DNS_CACHE_TIMEOUT and CURLOPT_DNS_USE_GLOBAL_CACHE are 64 bit
+   "clean"
  o memory leak when handling compressed data streams from broken servers
+ o no NTLM unicode response
 
 This release includes the following known bugs:
 
@@ -61,6 +63,6 @@ advice from friends like these:
  Daniel Cater, Colin Hogben, Jofell Gallardo, Daniel Johnson,
  Ralf S. Engelschall, James Housley, Chris Flerackers, Patrick Monnerat,
  Jayesh A Shah, Greg Zavertnik, Peter O'Gorman, Greg Morse, Dmitriy Sergeyev,
- Scott Cantor, Allen Pulsifer
+ Scott Cantor, Allen Pulsifer, Andrew Wansink
  
         Thanks! (and sorry if I forgot to mention someone)
